--- a/assets/css/setup/fonts.css
+++ b/assets/css/setup/fonts.css
@@ -2,6 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&family=Roboto:ital,wght@1,100&display=swap');
 
 @font-face {
-    font-family: "notes-font";
-    src: url("../../fonts/comici.ttf");
+  font-family: 'notes-font';
+  src: url('../../fonts/comici.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../../fonts/Roboto-Regular.ttf');
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../../fonts/Roboto-Bold.ttf');
+  font-style: normal;
+  font-weight: bold;
 }
