--- a/assets/css/cmps/mail/mail-compose.css
+++ b/assets/css/cmps/mail/mail-compose.css
@@ -1,14 +1,20 @@
 .mail-compose {
   box-shadow: 0px 3px 16px 0px rgb(50 50 50 / 75%);
-  position: fixed;
-  z-index: 5;
   background-color: #fff;
+  background-color: #fff;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  position: fixed;
+  width: 290px;
   bottom: 0px;
   right: 40px;
+  z-index: 10;
 }
 
 .compose-header {
-  background-color: #d75959;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: #404040;
   color: white;
 }
 .compose-header h4 {
@@ -17,7 +23,9 @@
   margin: 0;
 }
 .compose-header button {
-  background-color: #d75959;
+  background-color: #404040;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   color: white;
   padding: 10px;
   border: none;
@@ -46,18 +54,45 @@
   resize: none;
 }
 .compose-form button {
-  background-color: #d75959;
+  background-color: #297be6;
   color: #fff;
-  font-size: 1em;
-  padding: 7px 10px;
+  font-weight: bold;
+  padding: 10px 20px;
   margin-inline-start: 12px;
   margin-bottom: 10px;
   outline: none;
   border: none;
+  border-radius: 5px;
+  font-size: 1em;
 
   transition: 0.2s;
 }
 .compose-form button:hover {
   cursor: pointer;
-  box-shadow: 0px 0px 5px #d75959;
+  box-shadow: 0 1px 2px 0 rgb(26 115 232 / 45%), 0 1px 3px 1px rgb(26 115 232 / 30%);
+}
+
+@media (min-width: 335px) {
+  .mail-compose {
+    position: fixed;
+    width: 320px;
+  }
+}
+@media (min-width: 380px) {
+  .mail-compose {
+    position: fixed;
+    width: 350px;
+  }
+}
+@media (min-width: 450px) {
+  .mail-compose {
+    position: fixed;
+    width: 400px;
+  }
+}
+@media (min-width: 550px) {
+  .mail-compose {
+    position: fixed;
+    width: 500px;
+  }
 }
