--- a/assets/css/cmps/mail/mail-details.css
+++ b/assets/css/cmps/mail/mail-details.css
@@ -16,13 +16,13 @@
   width: 100%;
   margin: 2rem 0;
   border: 1px solid #292929;
-  background-color: rgb(230, 230, 230);
+  /* background-color: rgb(230, 230, 230); */
   box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
   flex-grow: 1;
 }
 
 .content-header {
-  background-color: #292929;
+  background-color: #404040;
   color: #f0eeee;
   padding: 0.5rem;
   line-height: 1.8;
