--- a/assets/css/cmps/mail/mail-modal.css
+++ b/assets/css/cmps/mail/mail-modal.css
@@ -6,11 +6,14 @@
   bottom: 3%;
   left: 5%;
   min-height: 50px;
-  background: rgb(43, 43, 43);
-  padding: 10px;
-  border-radius: 0.5em;
+  background-color: #202124;
+  color: #fff;
+  padding: 8px 24px;
+  border-radius: 4px;
   color: white;
   gap: 20px;
+  box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
+  z-index: 10;
 }
 .mail-modal button {
   background: rgb(43, 43, 43);
