--- a/assets/css/cmps/mail/mail-sidenav.css
+++ b/assets/css/cmps/mail/mail-sidenav.css
@@ -1,48 +1,48 @@
 .mail-sidenav {
   display: flex;
-  /* transform: translate(0); */
-  position: static;
-
-  width: 15.375rem;
-  background-color: #d75959;
   flex-direction: column;
-  gap: 2rem;
-  /* transform: translate(-100%); */
-  transition: transform 0.3s;
   position: static;
+  width: 15.375rem;
+  position: fixed;
   left: 0;
   top: 0;
   bottom: 0;
+  padding-left: 20px;
+  background-color: #fff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  gap: 2rem;
+  transform: translate(-100%);
 
-  transition: 0.3s;
+  transition: transform 0.3s;
+}
+
+.mail-sidenav.active-sidenav {
+  transform: translate(0);
+  z-index: 5;
 }
 
 .mail-sidenav-compose {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* width: 12rem;
-  height: 4rem; */
   width: 60px;
   height: 60px;
   margin-top: 2rem;
   border-radius: 30px;
-  background-color: #292929;
+
   color: #f0eeee;
   font-size: 1.5rem;
   cursor: pointer;
   margin-left: 5px;
   position: relative;
-
-  transition: 0.4s;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
 }
 .mail-sidenav-compose:hover {
-  width: 13rem;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 8px 1px rgb(60 64 67 / 15%);
 }
 
 .mail-sidenav ul {
   flex-direction: column;
-  gap: 35px;
   margin-top: 30px;
   height: 100vh;
 }
@@ -51,23 +51,27 @@
   display: flex;
   gap: 10px;
   cursor: pointer;
-  transition: 0.3s;
 }
 .mail-sidenav ul > li:hover {
-  background-color: #292929;
-  color: white;
+  background-color: #f1f3f4;
+  border-radius: 0px 30px 30px 0;
 }
 
 .side-nav {
-  font-family: Lato-Bold;
-  font-size: 1.5rem;
   padding: 10px;
 }
 
 .active-side {
-  background-color: #292929;
-  margin-left: 0;
-  color: #f0eeee;
-  padding: 1.2rem;
+  color: #d61200;
+  font-weight: bold;
+
   border-radius: 0px 30px 30px 0;
+  background-color: #fce8e6;
+}
+
+@media (min-width: 1020px) {
+  .mail-sidenav {
+    transform: translate(0);
+    position: static;
+  }
 }
