--- a/assets/css/cmps/mail/mail-preview.css
+++ b/assets/css/cmps/mail/mail-preview.css
@@ -83,6 +83,16 @@
   gap: 5px;
 }
 
+.btns-hover {
+  display: flex;
+  gap: 8px;
+  opacity: 0;
+}
+
+.mail-preview:hover .btns-hover {
+  opacity: 1;
+}
+
 @media (min-width: 1020px) {
   .mail-preview {
     flex-direction: row;
@@ -95,92 +105,3 @@
     margin-bottom: 0;
   }
 }
-
-/* .mail-preview {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  border: 1px solid #29292914;
-  padding: 0.5rem;
-  flex-wrap: nowrap;
-}
-
-.mail-preview-content {
-  display: flex;
-  gap: 1.5rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.mail-preview:hover {
-  cursor: pointer;
-  background-color: rgba(214, 214, 214, 0.801);
-}
-
-.mail-preview-content.unread {
-  font-weight: bold;
-}
-
-.mail-preview.read {
-  background-color: rgba(240, 240, 240, 0.623);
-}
-
-.mail-preview.read:hover {
-  background-color: rgba(214, 214, 214, 0.801);
-}
-
-.mail-preview-content.read > * {
-  font-weight: normal;
-}
-
-.mail-preview-body {
-  opacity: 0.3;
-}
-
-.mail-preview-star {
-  color: rgb(188, 188, 188);
-}
-
-.mail-preview-star:hover {
-  color: #f2c16b;
-}
-
-.mail-preview-star.active-star {
-  color: #f2c16b;
-}
-
-.mail-preview-delete {
-  color: #e34d4d;
-  opacity: 0.7;
-}
-
-.mail-preview-delete:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.mail-preview-subject {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.mail-preview-body {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.mail-list-time {
-  flex-grow: 2;
-  text-align: right;
-}
-
-.mail-preview-actions {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  justify-content: flex-end;
-  flex-grow: 1;
-  white-space: nowrap;
-} */
