--- a/assets/css/cmps/header.css
+++ b/assets/css/cmps/header.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   background-color: #a8dadc;
 }
 
@@ -19,4 +19,4 @@
 
 .main-nav ul li a.active {
   color: #e63946;
-}
+} */
