--- a/assets/css/cmps/keep/note-list.css
+++ b/assets/css/cmps/keep/note-list.css
@@ -1,8 +1,13 @@
 .note-list {
-    margin: 20px;
-    columns: 4;
-    column-gap: 10px;
+    text-align: center;
+    margin: 20px auto;
+    columns: 2;
+    column-gap: 30px;
     align-items: center;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
 
 }
 
@@ -11,28 +16,30 @@ iframe {
     max-height: 160px;
 }
 
+
+
+
 .note-list .search-container {
     margin-top: 35px;
     text-align: center;
 }
 
 .note-list .note-preview {
-    font-family: "notes-font";
-    line-height: 1.7rem;
-    text-align: center;
+    break-inside: avoid;
     line-break: anywhere;
-    width: 240px;
-    min-height: 200px;
-    margin: 20px 15px 12px 15px;
-    padding: 10px;
+    min-width: 140px;
+    min-height: 70px;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
-    margin-bottom: 12px;
-    break-inside: avoid;
-    padding: 12px;
-    border-radius: 20px;
+    margin-bottom: 15px;
+    padding: 20px;
+    padding-bottom: 40px;
+    font-family: "notes-font";
+    line-height: 1.7rem;
+    text-align: center;
+    border-radius: 15px;
 }
 
 .note-preview img {
