--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,8 @@
 @import '../css/cmps/mail/mail-sidenav.css';
 
 /* Cmps-Keep */
+
+@import '../css/cmps/keep/note-header.css';
 @import '../css/cmps/keep/note-list.css';
 @import '../css/cmps/keep/note-preview.css';
 @import '../css/cmps/keep/color-picker.css';
@@ -34,3 +36,4 @@
 @import '../css/cmps/keep/general.css';
 @import '../css/pages/keep.css';
 @import '../css/cmps/keep/note-todos.css';
+@import '../css/cmps/keep/note-responsive-design.css';
