--- a/assets/css/pages/keep.css
+++ b/assets/css/pages/keep.css
@@ -1,52 +1,37 @@
-.note-app span {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-left: 3%;
-}
-
-.logo-container span.sub-title {
-    font-family: 'PT Sans', sans-serif;
-    font-weight: 600;
-    color: gray;
-    line-height: 24px;
-    font-size: 22px;
-    position: absolute;
-    top: 45%;
-    left: 140%;
-}
-
-.logo-container {
-    position: relative;
-    width: 70px;
-    margin-bottom: 20px;
-    margin-top: 12px;
+.logo-container img {
+    width: 100%;
 }
 
 .Note-header {}
 
 .search-container {
-    position: absolute;
-    bottom: 5%;
-    left: 45%;
+    /* position: absolute; */
+    /* bottom: 5%;
+    left: 45%; */
     margin-bottom: 30px;
+    border-radius: 10px;
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+    width: 20%;
 }
 
 .search-container input {
     /* padding: 15px;   */
+    position: relative;
+    align-items: center;
     background: transparent;
-    background-color: transparent;
     border: none;
     outline: none;
-    border: 1px solid gray;
     padding: 15px 20px;
     border-radius: 15px;
     /* box-shadow: 0px 3px 16px 0px rgb(50 50 50 / 15%); */
 }
 
 .search-container .fas.fa-search {
+    position: absolute;
+    right: 2%;
+    top: 30%;
     cursor: pointer;
-    color: rgb(102, 102, 102);
+    color: lightgray;
     margin-inline-start: 10px;
 
 }
