--- a/assets/css/cmps/keep/note-responsive-design.css
+++ b/assets/css/cmps/keep/note-responsive-design.css
@@ -1,148 +1,141 @@
 @media (min-width: 360px) {
-    .main-layout {
-        width: 340px;
-    }
+  .main-layout {
+    width: 340px;
+  }
 
-    .header .logo-container {
-        width: 60;
-    }
+  .header .logo-container {
+    width: 60;
+  }
 }
 
 @media (min-width: 450px) {
-    .main-layout {
-        width: 390px;
-    }
+  .main-layout {
+    width: 390px;
+  }
 }
 
 @media (min-width: 540px) {
-    .header .search-container {
-        margin-left: 20%;
-        /* max-width: 40%; */
-    }
-
+  .header .search-container {
+    margin-left: 20%;
+    /* max-width: 40%; */
+  }
 }
 
-
 @media (min-width: 600px) {
-    .main-layout {
-        width: 530px;
-    }
+  .main-layout {
+    width: 530px;
+  }
 
-    .header .logo-container {
-        width: 60px;
-    }
-
-
+  .header .logo-container {
+    width: 60px;
+  }
 }
 
 @media (min-width: 700px) {
-    .main-layout {
-        width: 620px;
-    }
+  .main-layout {
+    width: 620px;
+  }
 
-    .header .search-container {
-        margin-left: 25%;
-        max-width: 40%;
-    }
+  .header .search-container {
+    margin-left: 25%;
+    max-width: 40%;
+  }
 
-    .add-note form input {
-        font-size: 1.1rem;
-        width: 70%;
-    }
+  .add-note form input {
+    font-size: 1.1rem;
+    width: 70%;
+  }
 
-    .note-list {
-        columns: 2;
-    }
+  .note-list {
+    columns: 2;
+  }
 
-    /* .note-preview {
+  /* .note-preview {
         width: 300px;
     } */
 
-    .i-frame {
-        width: 250px;
-        height: 200px;
-    }
-
-
-
+  .i-frame {
+    width: 250px;
+    height: 200px;
+  }
 }
 
 @media (min-width: 780px) {
-    .main-layout {
-        width: 700px;
-    }
+  .main-layout {
+    width: 700px;
+  }
 
-    .header .logo-container {
-        width: 70px;
-    }
+  .header .logo-container {
+    width: 70px;
+  }
 
-    .note-app span.logo-txt {
-        position: absolute;
-        top: 35%;
-    }
+  .note-app span.logo-txt {
+    position: absolute;
+    top: 35%;
+  }
 
-    .add-note form input {
-        width: 50%;
-        font-size: 1.3rem;
-    }
+  .add-note form input {
+    width: 50%;
+    font-size: 1.3rem;
+  }
 
-    .color-picker .color-value {
-        width: 25px;
-        height: 25px;
-    }
+  .color-picker .color-value {
+    width: 25px;
+    height: 25px;
+  }
 
-    .header .search-container input {
-        font-size: 1.3rem;
-    }
+  .header .search-container input {
+    font-size: 1.3rem;
+  }
 }
 
 @media (min-width: 920px) {
-    .main-layout {
-        width: 880px;
-    }
+  .main-layout {
+    width: 880px;
+  }
 
-    .header .search-container {
-        margin-left: 27%;
-        max-width: 40%;
-    }
+  .header .search-container {
+    margin-left: 27%;
+    max-width: 40%;
+  }
 
-    .header .logo-container {
-        width: 80px;
-    }
+  .header .logo-container {
+    width: 80px;
+  }
 }
 
 @media (min-width: 1050px) {
-    .main-layout {
-        width: 980px;
-    }
+  .main-layout {
+    width: 980px;
+  }
 
-    .note-list {
-        columns: 3;
-    }
+  .note-list {
+    columns: 3;
+  }
 }
 
 @media (min-width: 1250px) {
-    .main-layout {
-        width: 1080px;
-    }
+  .main-layout {
+    width: 1080px;
+  }
 
-    .note-list {
+  /* .note-list {
         columns: 4;
-    }
+    } */
 }
 
 @media (min-width: 1460px) {
-    .main-layout {
-        width: 1100px;
-    }
+  .main-layout {
+    width: 1100px;
+  }
 
-    .note-list {
-        columns: 5;
-    }
+  .note-list {
+    columns: 5;
+  }
 }
 
 @media (min-width: 1700px) {
-    .main-layout {
-        width: 1440px;
-    }
+  .main-layout {
+    width: 1440px;
+  }
 }
