--- a/assets/css/setup/fonts.css
+++ b/assets/css/setup/fonts.css
@@ -7,6 +7,21 @@
 }
 
 @font-face {
+  font-family: 'lato';
+  src: url('../../fonts/Lato-Bold.ttf');
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'lato';
+  src: url('../../fonts/Lato-Regular.ttf');
+  font-style: normal;
+  font-weight: normal;
+}
+
+
+@font-face {
   font-family: 'Roboto';
   src: url('../../fonts/Roboto-Regular.ttf');
   font-style: normal;
