--- a/assets/css/cmps/keep/note-responsive-design.css
+++ b/assets/css/cmps/keep/note-responsive-design.css
@@ -54,10 +54,10 @@
         width: 300px;
     } */
 
-  .i-frame {
+  /* .i-frame {
     width: 250px;
     height: 200px;
-  }
+  } */
 }
 
 @media (min-width: 780px) {
