--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -1,44 +1,151 @@
 .hero-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 3rem;
 
-    height: 85vh;
-
+  height: 85vh;
 }
-
 
 .hero-container .hero-left {
-    padding-left: 2.5rem;
+  padding-left: 2.5rem;
 }
-
-
 
 .hero-container .hero-right {
-    padding-right: 2.5rem;
+  padding-right: 2.5rem;
 }
 
-
 .hero-left .hero-txt p {
-    margin-bottom: 2rem;
-    font-family: lato;
-    font-size: 2rem;
+  margin-bottom: 2rem;
+  font-family: Roboto;
+  font-size: 2rem;
 }
 
 .hero-left a .cta-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 15rem;
-    font-size: 1.5rem;
-    padding: 15px;
-    cursor: pointer;
-    background-color: rgb(234, 67, 53);
-    color: white;
-    font-weight: 600;
-    border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 15rem;
+  font-size: 1.5rem;
+  padding: 15px;
+  cursor: pointer;
+  background-color: rgb(234, 67, 53);
+  color: white;
+  font-weight: 600;
+  border-radius: 15px;
 }
 
-.card-container .card {}
+.cards-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2.5rem;
+  font-weight: 400;
+  font-family: Roboto;
+  font-size: 2rem;
+  color: #282828;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  width: 100%;
+  padding: 0px 50px;
+  margin-bottom: 40px;
+  font-family: Roboto;
+}
+
+.card-container .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  width: 300px;
+  background-color: #fff;
+  text-align: center;
+  border: 1px solid rgb(224, 224, 224);
+  padding: 20px;
+}
+.card-container .card .card-btn {
+  background-color: #fff;
+  color: #1a73e8;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid rgb(224, 224, 224);
+
+  transition: background-color 0.3s, border 0.3s;
+}
+.card-container .card .card-btn:hover {
+  background-color: #f5f5f5;
+  border: 1px solid #1a73e8;
+}
+
+.about-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2.5rem;
+  font-weight: 400;
+  font-family: Roboto;
+  font-size: 2rem;
+  color: #282828;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 0px 50px;
+}
+
+.about {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  max-width: 980px;
+  width: 100%;
+  border: 1px solid rgb(224, 224, 224);
+  padding: 10px;
+  font-family: Roboto;
+}
+
+.about img {
+  border-radius: 100%;
+  width: 400px;
+  height: 200px;
+  object-fit: cover;
+  border: 2px solid rgb(224, 224, 224);
+}
+
+.about-content h3 {
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.about-content p {
+  text-align: center;
+}
+
+.about .social {
+  display: flex;
+  gap: 10px;
+}
+
+.about .social a {
+  background-color: #fff;
+  color: #282828;
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 100%;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.about .social a:hover {
+  background-color: rgb(224, 224, 224);
+}
