--- a/assets/css/setup/base.css
+++ b/assets/css/setup/base.css
@@ -2,10 +2,13 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   background-color: #fff;
-  /* height: 80vh; */
 }
 
 h1,
