home page responsive

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -1,18 +1,21 @@
 .hero-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding-top: 3rem;
-
+  text-align: center;
   height: 85vh;
 }
 
 .hero-container .hero-left {
-  padding-left: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.hero-container .hero-right {
-  padding-right: 2.5rem;
+.hero-right svg {
+  width: 300px;
 }
 
 .hero-left .hero-txt p {
@@ -48,6 +51,7 @@
 
 .card-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   gap: 40px;
   width: 100%;
@@ -62,11 +66,12 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  width: 300px;
+  width: 95%;
   background-color: #fff;
   text-align: center;
   border: 1px solid rgb(224, 224, 224);
   padding: 20px;
+  margin: 0 auto;
 }
 .card-container .card .card-btn {
   background-color: #fff;
@@ -102,6 +107,7 @@
 
 .about {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 40px;
   max-width: 980px;
@@ -113,8 +119,8 @@
 
 .about img {
   border-radius: 100%;
-  width: 400px;
-  height: 200px;
+  width: 170px;
+  height: 170px;
   object-fit: cover;
   border: 2px solid rgb(224, 224, 224);
 }
@@ -148,4 +154,43 @@
 
 .about .social a:hover {
   background-color: rgb(224, 224, 224);
+}
+
+@media (min-width: 780px) {
+  .hero-right svg {
+    width: 380px;
+    padding-bottom: 100px;
+  }
+  .card-container .card {
+    width: 494px;
+  }
+}
+@media (min-width: 1020px) {
+  .hero-container {
+    flex-direction: row;
+    gap: 50px;
+  }
+
+  .hero-right svg {
+    padding-bottom: 0px;
+  }
+  /* .hero-container .hero-left {
+    padding-left: 2.5rem;
+  }
+
+  .hero-container .hero-right {
+    padding-right: 2.5rem;
+  } */
+  .card-container {
+    flex-direction: row;
+  }
+  .about {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 1400px) {
+  .hero-right svg {
+    width: 400px;
+  }
 }
