--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -1,3 +1,57 @@
+/* ANIMATIONS */
+@keyframes right {
+  0% {
+    transform: translateX(-150%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 100;
+  }
+}
+@keyframes top {
+  0% {
+    transform: translateY(-150%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 100;
+  }
+}
+@keyframes left {
+  0% {
+    transform: translateX(150%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 100;
+  }
+}
+@keyframes float-up-20 {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+@keyframes float-up-8 {
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-8px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
+}
+
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -6,6 +60,8 @@
   padding-top: 3rem;
   text-align: center;
   height: 85vh;
+  border-bottom: 1px solid #d3d3d370;
+  margin-bottom: 20px;
 }
 
 .hero-container .hero-left {
@@ -14,8 +70,24 @@
   align-items: center;
 }
 
+.hero-right {
+  animation: left 1.5s ease-in-out;
+}
+
+.yellow-circle,
+.blue-circle,
+.red-circle,
+.green-circle {
+  animation: float-up-20 3s ease-in-out infinite;
+}
+
 .hero-right svg {
   width: 300px;
+  height: 300px;
+}
+
+.hero-left .hero-txt {
+  animation: right 1.5s ease-in-out;
 }
 
 .hero-left .hero-txt p {
@@ -37,6 +109,7 @@
   color: white;
   font-weight: 600;
   border-radius: 15px;
+  animation: top 1s ease-in-out;
 }
 
 .cards-title {
@@ -90,7 +163,6 @@
 .about-title {
   display: flex;
   justify-content: center;
-  margin-bottom: 2.5rem;
   font-weight: 400;
   font-family: Roboto;
   font-size: 2rem;
@@ -159,7 +231,8 @@
 @media (min-width: 780px) {
   .hero-right svg {
     width: 380px;
-    padding-bottom: 100px;
+    height: 380px;
+    margin-bottom: 100px;
   }
   .card-container .card {
     width: 494px;
@@ -174,23 +247,22 @@
   .hero-right svg {
     padding-bottom: 0px;
   }
-  /* .hero-container .hero-left {
-    padding-left: 2.5rem;
-  }
 
-  .hero-container .hero-right {
-    padding-right: 2.5rem;
-  } */
   .card-container {
     flex-direction: row;
+    margin-bottom: 150px;
   }
   .about {
     flex-direction: row;
+  }
+  .about img {
+    width: 350px;
   }
 }
 
 @media (min-width: 1400px) {
   .hero-right svg {
     width: 400px;
+    height: 400px;
   }
 }
