--- a/assets/css/cmps/keep/add-note.css
+++ b/assets/css/cmps/keep/add-note.css
@@ -4,23 +4,26 @@
 }
 
 .add-note form {
-    /* padding: 5px; */
-    margin-bottom: 22px;
-    margin-left: 15%;
+    padding-bottom: 10px;
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     border-radius: 20px;
-    width: 70%;
+    width: 77%;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
 
 
 }
 
 
 .add-note form input {
+    text-align: center;
+    margin: 0 auto;
     font-size: 1rem;
     padding: 15px;
     border: 2px solid gray;
