--- a/assets/css/cmps/keep/note-header.css
+++ b/assets/css/cmps/keep/note-header.css
@@ -1,6 +1,5 @@
-.header {
+/* .header {
     display: flex;
-    /* width: 100%; */
     z-index: 1;
     min-height: 70px;
     align-items: center;
@@ -14,15 +13,6 @@
 
 }
 
-.main-layout span.sub-title {
-    font-family: 'PT Sans', sans-serif;
-    font-weight: 600;
-    color: gray;
-    line-height: 24px;
-    font-size: 22px;
-    margin-left: 3%;
-
-}
 
 .logo-container {
     position: relative;
@@ -45,4 +35,4 @@
 .header .search-container input {
     width: 100%;
     font-size: 1rem;
-}
+} */
