--- a/assets/css/cmps/keep/note-responsive-design.css
+++ b/assets/css/cmps/keep/note-responsive-design.css
@@ -12,14 +12,19 @@
   .main-layout {
     width: 390px;
   }
+
+  .search-container {
+    width: 40%;
+  }
+
+  iframe {
+    width: 150px;
+    height: 120px;
+  }
+
 }
 
-@media (min-width: 540px) {
-  .header .search-container {
-    margin-left: 20%;
-    /* max-width: 40%; */
-  }
-}
+
 
 @media (min-width: 600px) {
   .main-layout {
@@ -29,6 +34,8 @@
   .header .logo-container {
     width: 60px;
   }
+
+
 }
 
 @media (min-width: 700px) {
@@ -36,10 +43,6 @@
     width: 620px;
   }
 
-  .header .search-container {
-    margin-left: 25%;
-    max-width: 40%;
-  }
 
   .add-note form input {
     font-size: 1.1rem;
@@ -50,92 +53,118 @@
     columns: 2;
   }
 
-  /* .note-preview {
-        width: 300px;
-    } */
+  .search-container {
+    width: 35%;
+  }
 
-  /* iframe {
-    width: 250px;
+  iframe {
+    width: 210px;
     height: 200px;
-  } */
-}
-
-@media (min-width: 780px) {
-  .main-layout {
-    width: 700px;
   }
 
-  .header .logo-container {
-    width: 70px;
+  @media (min-width: 780px) {
+    .main-layout {
+      width: 700px;
+    }
+
+    .header .logo-container {
+      width: 70px;
+    }
+
+    .note-app span.logo-txt {
+      position: absolute;
+      top: 35%;
+    }
+
+    .add-note form input {
+      width: 50%;
+      font-size: 1.3rem;
+    }
+
+    .color-picker .color-value {
+      width: 25px;
+      height: 25px;
+    }
+
+    .header .search-container input {
+      font-size: 1.3rem;
+    }
+
+    .search-container {
+      width: 30%;
+    }
   }
 
-  .note-app span.logo-txt {
-    position: absolute;
-    top: 35%;
+  @media (min-width: 920px) {
+    .main-layout {
+      width: 880px;
+    }
+
+    .header .search-container {
+      margin-left: 27%;
+      max-width: 40%;
+    }
+
+    .header .logo-container {
+      width: 80px;
+    }
   }
 
-  .add-note form input {
-    width: 50%;
-    font-size: 1.3rem;
+  @media (min-width: 1050px) {
+    .main-layout {
+      width: 980px;
+    }
+
+    .note-list {
+      columns: 3;
+    }
+
+    .search-container {
+      width: 25%;
+    }
+
+    .add-note form {
+      width: 70%;
+    }
   }
 
-  .color-picker .color-value {
-    width: 25px;
-    height: 25px;
+  @media (min-width: 1250px) {
+    .main-layout {
+      width: 1080px;
+    }
+
+
+    .search-container {
+      width: 20%;
+    }
+
+    .add-note form {
+      width: 60%;
+    }
+
+    iframe {
+      width: 210px;
+      height: 200px;
+    }
   }
 
-  .header .search-container input {
-    font-size: 1.3rem;
-  }
-}
+  @media (min-width: 1460px) {
+    .main-layout {
+      width: 1100px;
+    }
 
-@media (min-width: 920px) {
-  .main-layout {
-    width: 880px;
-  }
+    .note-list {
+      columns: 4;
+    }
 
-  .header .search-container {
-    margin-left: 27%;
-    max-width: 40%;
-  }
-
-  .header .logo-container {
-    width: 80px;
-  }
-}
-
-@media (min-width: 1050px) {
-  .main-layout {
-    width: 980px;
+    .add-note form {
+      width: 50%;
+    }
   }
 
-  .note-list {
-    columns: 3;
-  }
-}
-
-@media (min-width: 1250px) {
-  .main-layout {
-    width: 1080px;
-  }
-
-  /* .note-list {
-        columns: 4;
-    } */
-}
-
-@media (min-width: 1460px) {
-  .main-layout {
-    width: 1100px;
-  }
-
-  .note-list {
-    columns: 4;
-  }
-}
-
-@media (min-width: 1700px) {
-  .main-layout {
-    width: 1440px;
+  @media (min-width: 1700px) {
+    .main-layout {
+      width: 1440px;
+    }
   }
 }
