--- a/assets/css/pages/keep.css
+++ b/assets/css/pages/keep.css
@@ -5,17 +5,24 @@
 .Note-header {}
 
 .search-container {
-    /* position: absolute; */
-    /* bottom: 5%;
-    left: 45%; */
+    position: relative;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 35px;
     margin-bottom: 30px;
     border-radius: 10px;
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
-    width: 20%;
+    width: 50%;
+}
+
+.search-container img {
+    position: absolute;
+    top: 25%;
 }
 
 .search-container input {
     /* padding: 15px;   */
+    font-size: 1.2rem;
     position: relative;
     align-items: center;
     background: transparent;
@@ -23,6 +30,7 @@
     outline: none;
     padding: 15px 20px;
     border-radius: 15px;
+    margin-left: 15px;
     /* box-shadow: 0px 3px 16px 0px rgb(50 50 50 / 15%); */
 }
 
@@ -41,4 +49,8 @@
     position: relative;
     border-bottom: 1px solid lightgray;
     box-shadow: inset 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 7%)
+}
+
+.note-app .note-search {
+    font-size: 1.2rem;
 }
