--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -40,17 +40,6 @@
     transform: translatey(0px);
   }
 }
-@keyframes float-up-8 {
-  0% {
-    transform: translatey(0px);
-  }
-  50% {
-    transform: translatey(-8px);
-  }
-  100% {
-    transform: translatey(0px);
-  }
-}
 
 .hero-container {
   display: flex;
@@ -110,6 +99,12 @@
   font-weight: 600;
   border-radius: 15px;
   animation: top 1s ease-in-out;
+
+  transition: transform 0.3s;
+}
+
+.hero-left a .cta-btn:hover {
+  transform: scale(1.05);
 }
 
 .cards-title {
