--- a/assets/css/cmps/header.css
+++ b/assets/css/cmps/header.css
@@ -28,8 +28,8 @@
 
 .logo-container .logo-txt {
   cursor: pointer;
-  font-family: lato;
-  font-size: 1.5rem;
+  font-family: marvel;
+  font-size: 3rem;
   transition: 0.5s ease-in-out;
 }
 
@@ -37,7 +37,6 @@
   display: flex;
   gap: 15px;
 }
-
 
 .menu-item p {
   font-family: Roboto;
