final comit!!!!!!!!! (for now)

--- a/assets/css/cmps/keep/note-editor.css
+++ b/assets/css/cmps/keep/note-editor.css
@@ -1,24 +1,25 @@
 .note-editor {
-    opacity: 0;
+    opacity: 1;
     transition: 0.7s ease-out;
     padding-top: 10px;
     position: absolute;
-    bottom: 5%;
+    bottom: 3%;
     right: 5%;
+    color: gray;
 
 }
 
 
 .note-editor>* {
     margin-left: 1.5rem;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     cursor: pointer;
 }
 
 .note-preview:hover>.note-editor {
     opacity: 1;
     color: darkgrey;
-    margin-left: 1.5rem;
+    /* margin-left: 1.5rem; */
     font-size: 1.3rem;
 }
 
