--- a/assets/css/cmps/mail/mail-details.css
+++ b/assets/css/cmps/mail/mail-details.css
@@ -7,22 +7,19 @@
   gap: 5px;
   cursor: pointer;
   font-size: 1.5rem;
-}
-
-.action-back-content {
+  color: #282828;
 }
 
 .mail-details-content {
   width: 100%;
   margin: 2rem 0;
   border: 1px solid #292929;
-  /* background-color: rgb(230, 230, 230); */
   box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
   flex-grow: 1;
 }
 
 .content-header {
-  background-color: #404040;
+  background-color: #282828;
   color: #f0eeee;
   padding: 0.5rem;
   line-height: 1.8;
