--- a/assets/css/cmps/mail/mail-details.css
+++ b/assets/css/cmps/mail/mail-details.css
@@ -23,6 +23,7 @@
   color: #f0eeee;
   padding: 0.5rem;
   line-height: 1.8;
+  font-family: Roboto;
 }
 
 .content-body {
@@ -34,6 +35,7 @@
   margin-bottom: 2rem;
   line-height: 1.5rem;
   min-height: 50vh;
+  font-family: Roboto;
 }
 
 .mail-details-delete {
