--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,7 @@
 @import '../css/cmps/keep/general.css';
 @import '../css/pages/keep.css';
 @import '../css/cmps/keep/note-todos.css';
+@import '../css/cmps/keep/note-modal.css';
 @import '../css/cmps/keep/note-responsive-design.css';
 
 /* Cmps-Mail */
