--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,6 @@
 @import './cmps/header.css';
 @import './cmps/footer.css';
 
-
 /* PAGES */
 @import '../css/pages/mail.css';
 @import '../css/pages/home.css';
@@ -42,3 +41,10 @@
 @import '../css/cmps/mail/mail-filter.css';
 @import '../css/cmps/mail/mail-sidenav.css';
 @import '../css/cmps/mail/screen.css';
+
+/* Cmps-Book */
+@import '../css/cmps/book/BookAdd.css';
+@import '../css/cmps/book/BookDetails.css';
+@import '../css/cmps/book/BookFilter.css';
+@import '../css/cmps/book/BookList.css';
+@import '../css/cmps/book/BookPreview.css';
