--- a/assets/css/cmps/book/BookFilter.css
+++ b/assets/css/cmps/book/BookFilter.css
@@ -7,6 +7,11 @@
   align-items: center;
 }
 
+.filter-title {
+  font-family: marvel;
+  font-size: 1.5rem;
+}
+
 .filter-container .add-book {
   justify-content: center;
 }
@@ -29,6 +34,20 @@
 .book-filter input {
   outline: none;
   padding: 0.5rem;
+}
+
+.add-book-title {
+  font-family: marvel;
+  font-size: 1.2rem;
+}
+
+.add-book input {
+  outline: none;
+  padding: 0.5rem;
+}
+
+.filter-container input:focus {
+  border-color: #4285f4;
 }
 
 @media (min-width: 780px) {
