--- a/assets/css/cmps/mail/mail-modal.css
+++ b/assets/css/cmps/mail/mail-modal.css
@@ -4,7 +4,7 @@
   align-items: center;
   position: fixed;
   bottom: 3%;
-  left: 5%;
+  right: 5%;
   min-height: 50px;
   background-color: #202124;
   color: #fff;
