--- a/assets/css/cmps/mail/mail-sidenav.css
+++ b/assets/css/cmps/mail/mail-sidenav.css
@@ -44,7 +44,7 @@
 .mail-sidenav ul {
   flex-direction: column;
   margin-top: 30px;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .mail-sidenav ul > li {
