--- a/assets/css/cmps/book/BookPreview.css
+++ b/assets/css/cmps/book/BookPreview.css
@@ -25,6 +25,7 @@
 
 .book-preview:hover {
   background-color: #ffeeca;
+  box-shadow: rgb(14 30 37 / 0%) 0px 2px 4px 0px, rgb(14 30 37 / 26%) 0px 2px 11px 4px;
   cursor: pointer;
   transform: scale(1.04);
 }
